--- a/programs/delayed_node/CMakeLists.txt
+++ b/programs/delayed_node/CMakeLists.txt
@@ -10,10 +10,10 @@ if( GPERFTOOLS_FOUND )
 endif()
 IF(WIN32)
 target_link_libraries( delayed_node		 
-						PRIVATE graphene_app graphene_account_history graphene_transaction graphene_market_history graphene_delayed_node graphene_chain graphene_egenesis_full fc ${CMAKE_DL_LIBS} ${PLATFORM_SPECIFIC_LIBS} )
+						PRIVATE graphene_app graphene_account_history graphene_transaction graphene_market_history graphene_delayed_node graphene_chain graphene_egenesis_full fc ${CMAKE_DL_LIBS} ${PLATFORM_SPECIFIC_LIBS} leveldb)
 ELSE()
 target_link_libraries( delayed_node
-                       PRIVATE graphene_app graphene_witness graphene_account_history graphene_transaction graphene_market_history graphene_delayed_node graphene_chain graphene_egenesis_full fc crosschain_privatekey_management $ENV{CROSSCHAIN_PRIVATEKEY_PROJECT}/libblocklink_libbitcoin_secp256k1.a $ENV{CROSSCHAIN_PRIVATEKEY_PROJECT}/libblocklink_libbitcoin.a ${CMAKE_DL_LIBS} ${PLATFORM_SPECIFIC_LIBS} )
+                       PRIVATE graphene_app graphene_witness graphene_account_history graphene_transaction graphene_market_history graphene_delayed_node graphene_chain graphene_egenesis_full fc crosschain_privatekey_management $ENV{CROSSCHAIN_PRIVATEKEY_PROJECT}/libblocklink_libbitcoin_secp256k1.a $ENV{CROSSCHAIN_PRIVATEKEY_PROJECT}/libblocklink_libbitcoin.a ${CMAKE_DL_LIBS} ${PLATFORM_SPECIFIC_LIBS} leveldb)
 
 ENDIF()
 
