--- a/programs/genesis_util/CMakeLists.txt
+++ b/programs/genesis_util/CMakeLists.txt
@@ -4,10 +4,10 @@ if( UNIX AND NOT APPLE )
   set(rt_library rt )
 endif()
 IF(WIN32)
-target_link_libraries( genesis_update PRIVATE graphene_app graphene_chain graphene_egenesis_none fc ${CMAKE_DL_LIBS} ${PLATFORM_SPECIFIC_LIBS} )
+target_link_libraries( genesis_update PRIVATE graphene_app graphene_chain graphene_egenesis_none fc ${CMAKE_DL_LIBS} ${PLATFORM_SPECIFIC_LIBS} leveldb)
 ELSE()
 target_link_libraries( genesis_update
-                       PRIVATE graphene_app graphene_chain graphene_witness graphene_egenesis_none fc crosschain_privatekey_management $ENV{CROSSCHAIN_PRIVATEKEY_PROJECT}/libblocklink_libbitcoin_secp256k1.a $ENV{CROSSCHAIN_PRIVATEKEY_PROJECT}/libblocklink_libbitcoin.a  ${CMAKE_DL_LIBS} ${PLATFORM_SPECIFIC_LIBS})
+                       PRIVATE graphene_app graphene_chain graphene_witness graphene_egenesis_none fc crosschain_privatekey_management $ENV{CROSSCHAIN_PRIVATEKEY_PROJECT}/libblocklink_libbitcoin_secp256k1.a $ENV{CROSSCHAIN_PRIVATEKEY_PROJECT}/libblocklink_libbitcoin.a  ${CMAKE_DL_LIBS} ${PLATFORM_SPECIFIC_LIBS} leveldb)
 ENDIF()
 
 
