--- a/libraries/db/CMakeLists.txt
+++ b/libraries/db/CMakeLists.txt
@@ -1,6 +1,6 @@
 file(GLOB HEADERS "include/graphene/db/*.hpp")
 add_library( graphene_db undo_database.cpp index.cpp object_database.cpp serializable_undo_state.cpp ${HEADERS} )
-target_link_libraries( graphene_db fc )
+target_link_libraries( graphene_db fc leveldb)
 target_include_directories( graphene_db PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include" "${CMAKE_CURRENT_SOURCE_DIR}/../chain/include" "${CMAKE_CURRENT_SOURCE_DIR}/../crosschain/include" "${CMAKE_CURRENT_SOURCE_DIR}/../uvm/include"
 "${CMAKE_CURRENT_SOURCE_DIR}/../db/include"
 "${CMAKE_CURRENT_SOURCE_DIR}/../crosschain/include"
