Create MiniDump after witness_node crash(Windows only) Database_api::invoke_contract_testing return api_result addtionally Rewind once only

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -124,7 +124,7 @@ if( WIN32 )
     SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MP" )
 	SET(LEVELDB_PORT_FILE "${LEVEL_DB_DIR}/port/port_win.cc" )
     list(APPEND LEVELDB_BUILD_DEFINES OS_WINDOWS LEVELDB_PLATFORM_WINDOWS )
-    list(APPEND LEVELDB_BUILD_LIBRARIES shlwapi.lib)
+    list(APPEND LEVELDB_BUILD_LIBRARIES shlwapi.lib Dbghelp.lib)
     list(INSERT LEVELDB_BUILD_PRIVATE_INCLUDES 0 "${CMAKE_SOURCE_DIR}/libraries/leveldb-msvc/include")
 else( WIN32 ) # Apple AND Linux
 	list(APPEND LEVELDB_BUILD_DEFINES LEVELDB_PLATFORM_POSIX LEVELDB_ATOMIC_PRESENT)
