--- a/libraries/crosschain/CMakeLists.txt
+++ b/libraries/crosschain/CMakeLists.txt
@@ -18,6 +18,7 @@ set(sources
    crosschain_interface_hc.cpp
    crosschain_interface_eth.cpp
    crosschain_interface_erc.cpp
+   crosschain_interface_usdt.cpp
    crosschain_transaction_record_plugin.cpp
    ${HEADERS})
 
