--- a/.gitignore
+++ b/.gitignore
@@ -420,7 +420,16 @@ third_libs
 /programs/build_helpers/cat-parts
 /programs/build_helpers/cmake_install.cmake
 /programs/build_helpers/member_enumerator
-/programs/cli_wallet/CMakeFiles/
-/programs/cli_wallet/Makefile
-/programs/cli_wallet/cli_wallet
+/libleveldb.a
+/libraries/egenesis/debuglog
+/libraries/egenesis/egenesis_brief.cpp
+/programs/witness_node
+/programs/cli_wallet
+/programs/key_decryptor
+/programs/cli_wallet/before-import-key-*
+/programs/cli_wallet/after-import-key-*
+/libraries/egenesis/gmon.out
+/libraries/egenesis/egenesis_full.cpp
+/libraries/fc/libfc_debug.a
+/libraries/fc/stucJin8
 
