--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,11 @@ services:
     volumes:
       - .:/code
     working_dir: /code
-    ports:
-      - "8090:8090"
-      - "8091:8091"
-      - "9034:9034"
+    expose:
+      - "8090"
+      - "8091"
+      - "9034"
+#    ports:
+#      - "8090:8090"
+#      - "8091:8091"
+#      - "9034:9034"
