--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,9 +8,10 @@ services:
 
 before_script:
     - echo hello
+    - apk --update add curl
+    - apk add --no-cache python py2-pip
     - docker info
-    - curl -L "https://github.com/docker/compose/releases/download/1.10.0/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-    - chmod +x /usr/local/bin/docker-compose
+    - pip install --no-cache-dir docker-compose
     - export PATH=/usr/local/bin:$PATH
     - echo $PATH
 
