add dummy run_tests.py

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,7 @@ image: zoowii/hxcore_hxbuild:latest
 
 before_script:
     - echo hello
+    - apt install -y python3
     - git submodule update --init --recursive
 
 stages:
@@ -11,9 +12,13 @@ stages:
 build:
   stage: build
   script:
-    - cmake .
-    - cd programs/witness_node && make -j2
+   - - cmake .
+    - cd programs/witness_node && make -j2 && cd ../..
+   - cd programs/cli_wallet && make -j2 && cd ../..
+#    - sh -x build.sh
 
 test:
   script:
     - echo hello
+    - ci_tests/test_runner.sh
+
