--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,7 @@ stages:
 build:
   stage: build
   script:
-   - - cmake .
+   - cmake .
    - cd programs/witness_node && make -j2 && cd ../..
    - cd programs/cli_wallet && make -j2 && cd ../..
 #    - sh -x build.sh
