--- a/libraries/CMakeLists.txt
+++ b/libraries/CMakeLists.txt
@@ -12,3 +12,4 @@ add_subdirectory( wallet )
 add_subdirectory( crosschain )
 add_subdirectory( jsondiff )
 add_subdirectory( crosschain_privatekey_management )
+add_subdirectory( ed25519-donna )
