--- a/programs/delayed_node/CMakeLists.txt
+++ b/programs/delayed_node/CMakeLists.txt
@@ -13,7 +13,7 @@ target_link_libraries( delayed_node
 						PRIVATE graphene_app graphene_account_history graphene_transaction graphene_market_history graphene_delayed_node graphene_chain graphene_egenesis_full fc ${CMAKE_DL_LIBS} ${PLATFORM_SPECIFIC_LIBS} leveldb)
 ELSE()
 target_link_libraries( delayed_node
-                       PRIVATE graphene_app graphene_witness graphene_account_history graphene_transaction graphene_market_history graphene_delayed_node graphene_chain graphene_egenesis_full fc crosschain_privatekey_management $ENV{CROSSCHAIN_PRIVATEKEY_PROJECT}/libblocklink_libbitcoin_secp256k1.a $ENV{CROSSCHAIN_PRIVATEKEY_PROJECT}/libblocklink_libbitcoin.a ${CMAKE_DL_LIBS} ${PLATFORM_SPECIFIC_LIBS} leveldb)
+                       PRIVATE graphene_app graphene_witness graphene_account_history graphene_transaction graphene_market_history graphene_delayed_node graphene_chain graphene_egenesis_full fc crosschain_privatekey_management  blocklink_libbitcoin_secp256k1 blocklink_libbitcoin ${CMAKE_DL_LIBS} ${PLATFORM_SPECIFIC_LIBS} leveldb)
 
 ENDIF()
 
