--- a/libraries/plugins/CMakeLists.txt
+++ b/libraries/plugins/CMakeLists.txt
@@ -2,6 +2,7 @@ add_subdirectory( witness )
 add_subdirectory( account_history )
 add_subdirectory( market_history )
 add_subdirectory( delayed_node )
+add_subdirectory( backup )
 add_subdirectory( debug_witness )
 add_subdirectory( transaction )
 add_subdirectory( network)
