--- a/programs/witness_node/CMakeLists.txt
+++ b/programs/witness_node/CMakeLists.txt
@@ -11,10 +11,10 @@ endif()
 
 # We have to link against graphene_debug_witness because deficiency in our API infrastructure doesn't allow plugins to be fully abstracted #246
 IF(WIN32)
-target_link_libraries( witness_node	  PRIVATE graphene_app graphene_account_history  graphene_market_history graphene_witness graphene_chain graphene_network graphene_debug_witness graphene_transaction graphene_egenesis_full fc ${CMAKE_DL_LIBS} ${PLATFORM_SPECIFIC_LIBS} leveldb)
+target_link_libraries( witness_node	  PRIVATE graphene_app graphene_account_history  graphene_market_history graphene_witness graphene_chain graphene_network graphene_debug_witness graphene_backup graphene_transaction graphene_egenesis_full fc ${CMAKE_DL_LIBS} ${PLATFORM_SPECIFIC_LIBS} leveldb)
 ELSE()
 target_link_libraries( witness_node
-                       PRIVATE graphene_app graphene_account_history  graphene_market_history graphene_witness graphene_chain graphene_network graphene_debug_witness graphene_transaction graphene_egenesis_full fc crosschain_privatekey_management $ENV{CROSSCHAIN_PRIVATEKEY_PROJECT}/libblocklink_libbitcoin_secp256k1.a $ENV{CROSSCHAIN_PRIVATEKEY_PROJECT}/libblocklink_libbitcoin.a ${CMAKE_DL_LIBS} ${PLATFORM_SPECIFIC_LIBS} leveldb)
+                       PRIVATE graphene_app graphene_account_history  graphene_market_history graphene_witness graphene_chain graphene_network graphene_debug_witness graphene_backup graphene_transaction graphene_egenesis_full fc crosschain_privatekey_management $ENV{CROSSCHAIN_PRIVATEKEY_PROJECT}/libblocklink_libbitcoin_secp256k1.a $ENV{CROSSCHAIN_PRIVATEKEY_PROJECT}/libblocklink_libbitcoin.a ${CMAKE_DL_LIBS} ${PLATFORM_SPECIFIC_LIBS} leveldb)
 ENDIF()
 
 
